--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,8 @@
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
-    <%= stylesheet_link_tag "application" %>
-    <%= javascript_importmap_tags %>
+    <%= stylesheet_pack_tag 'application' %>
+    <%= javascript_pack_tag 'application', defer: true %>
   </head>
 
   <body>
