--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,21 +7,12 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "tailwind", "inter-font" %>
-    <%= stylesheet_link_tag 'application' %>
+    <%= stylesheet_pack_tag 'application' %>
 
-    <%= javascript_pack_tag 'application' %>
-    <!--
-      If using a TypeScript entrypoint file:
-        vite_typescript_tag 'application'
-
-      If using a .jsx or .tsx entrypoint, add the extension:
-        vite_javascript_tag 'application.jsx'
-
-      Visit the guide for more information: https://vite-ruby.netlify.app/guide/rails
-    -->
+    <%= javascript_pack_tag 'application', defer: true %>
   </head>
 
   <body>
-    <div id="app"></div>
+    <%= yield %>
   </body>
 </html>
