--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 
     <%# <%= stylesheet_link_tag "application", media: 'all', 'data-turbolinks-track': 'reload' %> 
     <%# <%= stylesheet_pack_tag "application", media: 'all' %>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <%= javascript_pack_tag 'application', defer: true %>
   </head>
 
