--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <%# <%= vite_client_tag %>
     <%= vite_react_refresh_tag %>
-    <%= vite_typescript_tag 'application.tsx' %>
+    <%= vite_typescript_tag 'application.jsx' %>
     <!--
       If using a TypeScript entrypoint file:
         vite_typescript_tag 'application'
