--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,17 +4,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-  	<base href=".">
 
-    <%= stylesheet_link_tag "application", media: 'all', 'data-turbolinks-track': 'reload' %> 
-    <%# <%= stylesheet_pack_tag "application", media: 'all' %>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <%# <%= vite_client_tag %>
-    <%= vite_react_refresh_tag %>
-    <%= vite_typescript_tag 'application.jsx' %>
+    <%= stylesheet_link_tag "application" %>
   </head>
 
   <body>
+    <h1>APPLICATION</h1>
     <%= yield %>
   </body>
 </html>
