--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <base href="/" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application" %>
+    <%= vite_react_refresh_tag %>
+    <%= vite_client_tag %>
+    <%= vite_typescript_tag 'application.tsx' %>
   </head>
 
-  <body>
-    <h1>APPLICATION</h1>
-    <%= yield %>
+	<body>
+		<%= yield %>
   </body>
 </html>
