--- a/lib/templates/rails/scaffold_controller/controller.rb.tt
+++ b/lib/templates/rails/scaffold_controller/controller.rb.tt
@@ -2,19 +2,19 @@
 class <%= controller_class_name %>Controller < ApplicationController
   include Searchable
   
-  expose :<%= plural_table_name %>, -> { search(@active_company.<%= plural_table_name %>.includes_associated, sortable_fields) }
+  expose :<%= plural_table_name %>, -> { search(<%= orm_class.build(class_name) %>.includes_associated, sortable_fields) }
 <% if attributes.include?(:slug) -%>
-  expose :<%= singular_table_name %>, id: ->{ params[:slug] }, scope: ->{ @active_company.<%= plural_table_name %>.includes_associated }, find_by: :slug
+  expose :<%= singular_table_name %>, id: ->{ params[:slug] }, scope: ->{ <%= orm_class.build(class_name) %>.includes_associated }, find_by: :slug
   <% else -%>
-  expose :<%= singular_table_name %>, scope: ->{ @active_company.<%= plural_table_name %> }, find: ->(id, scope){ scope.includes_associated.find(id) }
+  expose :<%= singular_table_name %>, scope: ->{ <%= orm_class.build(class_name) %>.includes_associated }
   <% end -%>
 
   sortable_fields %w(<%= permitted_params.gsub(/[:,]/, '') %>)
 
 <%- if attributes_names.empty? -%>
-  strong_params <%= singular_table_name %>, fetch: :<%= singular_table_name %>
+  strong_params :<%= singular_table_name %>, fetch: :<%= singular_table_name %>
   <%- else -%>
-  strong_params <%= singular_table_name %>, permit: [<%= permitted_params %>]
+  strong_params :<%= singular_table_name %>, permit: [<%= permitted_params %>]
   <%- end -%>
 
   def index
