--- a/lib/templates/rails/scaffold_controller/controller.rb.tt
+++ b/lib/templates/rails/scaffold_controller/controller.rb.tt
@@ -33,21 +33,21 @@ class <%= controller_class_name %>Controller < ApplicationController
 
   def show
     authorize <%= singular_table_name %>
-    render inertia: "<%= class_name %>/Show", props: {
+    render inertia: "<%= class_name.pluralize %>/Show", props: {
       <%= singular_table_name %>: -> { <%= singular_table_name %>.render(:show) }
     }
   end
 
   def new
     authorize <%= orm_class.build(class_name) %>
-    render inertia: "<%= class_name %>/New", props: {
+    render inertia: "<%= class_name.pluralize %>/New", props: {
       <%= singular_table_name %>: <%= orm_class.build(class_name) %>.render(:form_data)
     }
   end
 
   def edit
     authorize <%= singular_table_name %>
-    render inertia: "<%= class_name %>/Edit", props: {
+    render inertia: "<%= class_name.pluralize %>/Edit", props: {
       <%= singular_table_name %>: <%= singular_table_name %>.render(:edit)
     }
   end
