--- a/lib/templates/tsx/scaffold/Form.tsx.tt
+++ b/lib/templates/tsx/scaffold/Form.tsx.tt
@@ -2,14 +2,14 @@ import { Grid } from '@/Components'
 import { Form, TextInput, Submit } from '@/Components/Form'
 import { type HTTPVerb, type UseFormProps } from 'use-inertia-form'
 
-type T<%= singular_table_name.camelize %>FormData = {
+type <%= singular_table_name.camelize %>FormData = {
 	<%= singular_table_name %>: Schema.<%= plural_table_name.camelize %>FormData
 }
 
 export interface <%= singular_table_name.camelize %>FormProps {
 	to: string
 	method?: HTTPVerb
-	onSubmit?: (object: UseFormProps<T<%= singular_table_name.camelize %>FormData>) => boolean|void
+	onSubmit?: (object: UseFormProps<<%= singular_table_name.camelize %>FormData>) => boolean|void
 	<%= singular_table_name %>: Schema.<%= plural_table_name.camelize %>FormData
 }
 
@@ -29,7 +29,7 @@ const <%= singular_table_name.camelize %>Form = ({ method = 'post', <%= singular
 				<Grid.Col>
 					<Submit>{ <%= singular_table_name %>.id ? 'Update' : 'Create' } <%= singular_table_name.camelize %></Submit>
 				</Grid.Col>
-			</Grid.Col>
+			</Grid>
 		</Form>
 	)
 }
