--- a/lib/generators/serializer/templates/edit_serializer.rb.tt
+++ b/lib/generators/serializer/templates/edit_serializer.rb.tt
@@ -1,8 +1,2 @@
-class <%= model_name.pluralize.camelize %>::EditSerializer < ApplicationSerializer
-  object_as :<%= model_name %>
-
-  attributes(
-    :id,<% model_attributes&.reject{ |attr| ["updated_at", "created_at"].include?(attr) }&.each do |attribute| %>
-    :<%= attribute %>,<% end %>
-  )
+class <%= model_name.pluralize.camelize %>::EditSerializer < <%= model_name.pluralize.camelize %>::PersistedSerializer
 end
