--- a/lib/generators/serializer/templates/form_data_serializer.rb.tt
+++ b/lib/generators/serializer/templates/form_data_serializer.rb.tt
@@ -1,7 +1,2 @@
-class <%= model_name.pluralize.camelize %>::FormDataSerializer < ApplicationSerializer
-  object_as :<%= model_name %>
-
-  attributes(<% model_attributes&.reject{ |attr| ["updated_at", "created_at"].include?(attr) }&.each do |attribute| %>
-    :<%= attribute %>,<% end %>
-  )
+class <%= model_name.pluralize.camelize %>::FormDataSerializer < <%= model_name.camelize %>Serializer
 end
