--- a/lib/generators/serializer/templates/serializer.rb.tt
+++ b/lib/generators/serializer/templates/serializer.rb.tt
@@ -1,7 +1,7 @@
 class <%= model_name.camelize %>Serializer < ApplicationSerializer
-  object_as :<%= model_name %>
-
-  attributes(<% model_attributes.each do |attribute| %>
+  object_as :<%= model_name.gsub("/", "_") %>
+  <% if model_attributes.include?("slug") %>identifier :slug<% end %>
+  attributes(<% model_attributes&.reject{ |attr| ["id", "slug", "updated_at", "created_at"].include?(attr) }&.each do |attribute| %>
     :<%= attribute %>,<% end %>
   )
 end
