--- a/lib/templates/active_record/model/model.rb.tt
+++ b/lib/templates/active_record/model/model.rb.tt
@@ -1,18 +1,11 @@
 <% module_namespacing do -%>
 class <%= class_name %> < <%= parent_class_name.classify %>
-
-  pg_search_scope(
-    :search,
-    against: [<% attributes.each_with_index do |attribute, i| -%><%= "#{i == 0 ? "" : ", "}:#{attribute.name}" %><% end -%>],
-    <% unless attributes.select(&:reference?).empty? -%>associated_against: {
+  include PgSearchable
+  pg_search_config(against: [<% attributes.each_with_index do |attribute, i| -%><%= "#{i == 0 ? "" : ", "}:#{attribute.name}" %><% end -%>]<% unless attributes.select(&:reference?).empty? -%>, 
+  associated_against: {
       <% attributes.select(&:reference?).each_with_index do |attribute, i| -%><%= "#{i == 0 ? "" : ", "}#{attribute.name}" %><% end -%>: [],
     },
-    <% end -%>
-using: {
-      tsearch: { prefix: true },
-      trigram: {}
-    },
-  )
+    <% end -%>)
 
   tracked
   resourcify
